# fusee

./: .gitignore  50-nintendo-switch-rcm.rules  Cargo.toml  README.md  build.rs  shell.nix
fusee-cli/: Cargo.toml
fusee-cli/src/: app.rs  error.rs  main.rs  status.rs  usb.rs
fusee-cli/src/operations/: inject.rs
src/: lib.rs  macros.rs  main.rs  usb.rs
src/cli/: main.rs  status.rs
