[package]
name = "fusee"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
keywords = []
categories = []
edition = "2018"
license = "Apache-2.0/MIT"
description = "Launcher for the Fusee Gelee exploit."
documentation = "https://docs.rs/fusee"
repository = "https://github.com/mirage-rs/fusee"
homepage = "https://github.com/mirage-rs/fusee"
readme = "README.md"

[dependencies]
bytes = "1.0.0"
argh = "0.1.4"
owo-colors = "1.2.1"
rusb = "0.6.5"
thiserror = "1.0.23"
