[package]
name = "fusee-cli"
version = "0.1.0"
authors = ["Justus K <justus.k@protonmail.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
description = "Command line frontend for the fusee crate."

[[bin]]
name = "fusee"
path = "src/main.rs"

[dependencies]
clap = "2.33.0"
fusee = { path = "../" }
